--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./coverStyle.css">
   </head>
   <body>   
-    <a href="./index.html" id="background-img">Click</a>
+    <a href="./main.html" id="background-img">Click</a>
     <header>
       <h1 id="title">
         <span class="webScreen">Wardell "Stephen" Curry<span class="sr-only">The Second</span> &#8545;</span>
