updating images and adding content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="mobileScreen">Stephen<br/> Curry</span>
       </h1>
       <p class="headerIntro">
-        <span class="webScreen">An <abbr title="National Basketball Association">NBA</abbr> Star and Legend, who ushered in a new era in the game of basketball</span>.
+        <span class="webScreen">An <abbr title="National Basketball Association">NBA</abbr> Star and Legend, who changed the way basketball is played today.</span>.
         <span class="mobileScreen"><abbr title="National Basketball Association">NBA</abbr> Star and Legend</span>
       </p>
     </header>
