editing content and adding more images gotta figure out how to fix images quality

--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
           <p class="section-intro-mini">The Life of an <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player's Son</p>
         </header>
         <div class="section-line"></div>
-        <p>
+        <p id="tribute-info" class="article-info">
           <div class="right-img-container2" id="img-div">
             <img class="medium-size-image" src="./images/plushBall.png" alt="A very young Stephen Curry sitting with a plush basketball.">
             <figcaption class="medium-caption">
@@ -76,13 +76,12 @@
           <p class="section-intro-mini">Putting the nation on notice</p>
         </header>
         <div class="section-line"></div>
-        <p>
-          Suprisingly Stephen Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being ranked so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential.
+        <p class="article-info">
           <div class="right-img-container2">
             <img class="medium-size-image" src="./images/davidsonCollege.png" alt="Stephen Curry playing basketball in a Davidson jersey">
             <figcaption class="medium-caption">Stephen Curry playing for Davidson College</figcaption>
           </div>
-          In his freshmen year at Daviidson Steph would help his team  a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> Als American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. 
+          Suprisingly Stephen Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being ranked so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year at Daviidson Steph would help his team  a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> Als American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. 
         </p>
       </section>
       <section class="section-clear">
@@ -90,15 +89,29 @@
           <h2 class="section-title">Warroir's Dynasty</h2>
           <p class="section-intro-mini">4 NBA Champions Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
         </header>
+        <div class="section-line"></div>
+        <p class="article-info">
+          <div class="right-img-container2">
+            <img class="medium-image" src="./images/draftedCurry.png" />
+          </div>
+          Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his mom, and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors . 
+        </p>
       </section>
       <section class="section-clear">
         <header id="legacy">
           <h2 class="section-title">Life and Legacy</h2>
           <p class="section-intro-mini">Can life be more than basketball</p>
         </header>
+        <div class="section-line"></div>
+        <p class="article-info">
+          <div class="right-img-container">
+            <img class="medium-image" src="./images/curryFamily.png" />
+          </div>
+          There are many things that can said about Stephen Curry on and off the court. You can find an exuberate amount of artivles, videos, and messages from people of all walks of life sharing their personal thoughts on him or meeting him. 
+        </p>
       </section>
       <div class="section-clear large-img-container">
-        <img class="large-img" src="./images/stephTrophy.jpeg" alt="Stephen Curry standing with his MVP trophies and NBA Championship Trouphies">
+        <img class="large-img" src="./images/stephTrophy.png" alt="Stephen Curry standing with his MVP trophies and NBA Championship Trouphies">
         <figcaption class="large-caption">Curry standing with trophies he has won</figcaption>
       </div>
     </main>
