more content changes

--- a/main.html
+++ b/main.html
@@ -34,8 +34,7 @@
           <button><a href"#resources">Resources</a></button>
         </li>
       </ul>
-    </nav>
-    
+    </nav>    
     <main id="main">
       <div id="back-to-top" class="large-img-container">  
         <img class="large-img" src="./images/jersecyBack.png" alt="The back of Stephen Curry's jersey."/>                  
@@ -77,14 +76,14 @@
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-          <div class="right-img-container2">
+          <div class="left-img-container2">
             <img class="medium-size-image" src="./images/davidsonCollege.png" alt="Stephen Curry playing basketball in a Davidson jersey">
             <figcaption class="medium-caption">Stephen Curry playing for Davidson College</figcaption>
           </div>
           Suprisingly Stephen Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being ranked so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year at Daviidson Steph would help his team  a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> Als American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. 
         </p>
       </section>
-      <section class="section-clear">
+      <section class="section-clear section-header">
         <header id="dynasty">
           <h2 class="section-title">Warroir's Dynasty</h2>
           <p class="section-intro-mini">4 NBA Champions Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
@@ -97,7 +96,7 @@
           Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his mom, and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors . 
         </p>
       </section>
-      <section class="section-clear">
+      <section class="section-clear section-header">
         <header id="legacy">
           <h2 class="section-title">Life and Legacy</h2>
           <p class="section-intro-mini">Can life be more than basketball</p>
@@ -115,5 +114,12 @@
         <figcaption class="large-caption">Curry standing with trophies he has won</figcaption>
       </div>
     </main>
+    <footer class="section-clear">
+      <h2 id="resources">Resources</h2>
+      <p>Links to all pictures, quotes, and additional information can be found in the table below.</p>
+      <table>
+
+      </table>
+    </footer>
   </body>  
 </html>
