--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Mock Tribute</title>
-
+    
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -55,12 +55,13 @@
               A very young Stphen Cury sitting with a plush basketballl
             </figcaption>                   
           </div>
-          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player. He was born in Akron, Ohio, the eldest son of Wardell "Dell" Curry Sr., a former <abbr title="National Basketball Association">NBA</abbr> player, and Sonya Curry, in 1983. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr title="National Basketball Association">NBA</abbr> Arenas. With a <abbr title="three point">3PT</abbr> shooting star for a father, the Curry kids had access to behind the scene activities some can only dream of. It has been said that Steph even attended practices with his father. Dell Curry played for three different teams during his tenure in the <abbr title="National Basketball Association">NBA</abbr>. Throughout his childhood, it was common to see Steph and his siblings trying to participate in pre-game warm-ups or running through the filling arena stands.<span class="mobile-screen">Dell spoken openly with <abbr title="United States of America Basketball">USAB</abbr> during an interview about his son.</span><span class="webOnly"> In 2019 during an interview with <dfn><abbr title="United States of America Basketball">USAB</abbr></dfn> when asked about a young Steph Curry. Dell Curry gave the following statement:</span>
+          Wardell "Stephen" Curry &#8545;<span class="sr-only">the second</span> or Steph Curry, as we know him, is an active <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Player. He was born in Akron, Ohio, the eldest son of Wardell "Dell" Curry Sr., a former <abbr title="National Basketball Association">NBA</abbr> player, and Sonya Curry, in 1983. He grew up with two younger siblings, Seth and Sydel Curry. Steph and his siblings grew up in <abbr title="National Basketball Association">NBA</abbr> Arenas. With a <abbr title="three point">3PT</abbr> shooting star for a father, the Curry kids had access to behind the scene activities some can only dream of. It has been said that Steph even attended practices with his father. Dell Curry played for three different teams during his tenure in the <abbr title="National Basketball Association">NBA</abbr>. Throughout his childhood, it was common to see Steph and his siblings trying to participate in pre-game warm-ups or running through the filling arena stands.<span class="mobile-screen">Dell spoken openly with <abbr title="United States of America Basketball">USAB</abbr> during an interview about his son. You can a link to the article in the Resources section. </span><span class="large-Screen"> In 2019 during an interview with <dfn><abbr title="United States of America Basketball">USAB</abbr></dfn> when asked about a young Steph Curry. Dell Curry gave the following statement:
             <blockquote cite="https://www.usab.com/news-events/news/2015/05/before-they-made-it-stephen-curry.aspx">
               "He was energetic, always paid attention to what was going on, eager to learn. He tried several different sports, not just basketball. He played football, baseball, a little soccer. He was always very intuitive of what was going on around him. He just soaked it all up." 
               <cite>- Dell Curry</cite>
             </blockquote>
-          <div class="left-img-container">
+            </span>
+          <div class="left-img-container large-Screen">
             <img class="medium-size-image" src="./images/highFive.png" alt="Stpehned Curry as a child watching his dad's 3PT shooting contest.">          
             <figcaption class="medium-caption">
               A young Stephen Curry at his father's <abbr title="three point">3PT</abbr> shooting contest. Posted on Twitter by <span class="owner">Timeless Sports</span>
@@ -80,7 +81,11 @@
             <img class="medium-size-image" src="./images/davidsonCollege.png" alt="Stephen Curry playing basketball in a Davidson jersey">
             <figcaption class="medium-caption">Stephen Curry playing for Davidson College</figcaption>
           </div>
-          Suprisingly Stephen Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being ranked so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year at Daviidson Steph would help his team  a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> Als American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. 
+          Suprisingly Stephen Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being ranked so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year he accomplished many things. He set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month in November, February, and March. Steph would help his team a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. 
+          <div class="right-img-container">
+            <img class="medium-img" src="./images/davidsonCoach.png">
+          </div>
+          But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat. In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with three upsets against higher ranking opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas in the Elite Eight round.
         </p>
       </section>
       <section class="section-clear section-header">
@@ -103,8 +108,8 @@
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-          <div class="right-img-container">
-            <img class="medium-image" src="./images/curryFamily.png" />
+          <div class="right-small-container">
+            <img class="small-image" src="./images/curryFamily.png" />
           </div>
           There are many things that can said about Stephen Curry on and off the court. You can find an exuberate amount of artivles, videos, and messages from people of all walks of life sharing their personal thoughts on him or meeting him. 
         </p>
