adjusting images and added video

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <h1 id="title">Stephen Curry</h1>
-      <p class= "header-intro">An <dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Star</p>
+      <p class= "header-intro"><dfn><abbr title="National Basketball Association">NBA</abbr></dfn> Star</p>
     </header>
     <nav class="nav-bar">
       <ul>
@@ -22,7 +22,7 @@
           <button><a href="#young-curry">Young Curry</a></button>
         </li>
         <li>
-          <button><a href="#wildsats">Wildcats</a></button>
+          <button><a href="#wildcats">Wildcats</a></button>
         </li>
         <li>
           <button><a href="#dynasty">Dynasty</a></button>
@@ -37,7 +37,7 @@
     </nav>    
     <main id="main">
       <div id="back-to-top" class="large-img-container">  
-        <img class="large-img" src="./images/jersecyBack.png" alt="The back of Stephen Curry's jersey."/>                  
+        <img class="large-img" src="./images/jerseyBack.webp" alt="The back of Stephen Curry's jersey."/>                  
         <figcaption class="large-caption">
           Back of Curry's jersey.
         </figcaption>
@@ -49,9 +49,9 @@
         </header>
         <div class="section-line"></div>
         <p id="tribute-info" class="article-info">
-          <div class="right-img-container2" id="img-div">
-            <img class="medium-size-image" src="./images/plushBall.png" alt="A very young Stephen Curry sitting with a plush basketball.">
-            <figcaption class="medium-caption">
+          <div class="right-float2" id="img-div">
+            <img id="image" class="medium-size-image" src="./images/plushBasketball..jpeg" alt="A very young Stephen Curry sitting with a plush basketball.">
+            <figcaption class="medium-caption" id="img-caption">
               A very young Stphen Cury sitting with a plush basketballl
             </figcaption>                   
           </div>
@@ -61,8 +61,8 @@
               <cite>- Dell Curry</cite>
             </blockquote>
             </span>
-          <div class="left-img-container large-Screen">
-            <img class="medium-size-image" src="./images/highFive.png" alt="Stpehned Curry as a child watching his dad's 3PT shooting contest.">          
+          <div class="">
+            <img class="medium-size-image" src="./images/youngStephen.jpg" alt="Stpehned Curry as a child watching his dad's 3PT shooting contest.">          
             <figcaption class="medium-caption">
               A young Stephen Curry at his father's <abbr title="three point">3PT</abbr> shooting contest. Posted on Twitter by <span class="owner">Timeless Sports</span>
             </figcaption>
@@ -77,13 +77,13 @@
         </header>
         <div class="section-line"></div>
         <p class="article-info">
-          <div class="left-img-container2">
-            <img class="medium-size-image" src="./images/davidsonCollege.png" alt="Stephen Curry playing basketball in a Davidson jersey">
+          <div class="left-float image-style">
+            <img class="small-image" src="./images/davidsonCollege.jpg" alt="Stephen Curry playing basketball in a Davidson jersey">
             <figcaption class="medium-caption">Stephen Curry playing for Davidson College</figcaption>
           </div>
           Suprisingly Stephen Curry was not a highly sought after recruit. Towards the end of his high school career Stephen was only rated as an 3 star recruit. The highest rating a high school player can get is 5 and the lowest is 2. So being ranked so low amgonst other players across the country did not land him any scholarship offers. Curry had his eyes set on Virginia Tech to follow in his father's footsteps but after a try-out with the team he was only offered a walk-on role. However Steph knew he needed to go to a school where he would be guaranteed playing time if he wanted to make his dreams of going pro come true. It is no secret many colleges over looked Curry because of his physical appearance. At the end of his high school career, Stephen Curry stood at only 6'0 feet tall and weighed under 200 <abbr title="pounds">lbs</abbr> which many deemed unsuitable for the cutthroat and physically demanding nature of college basketball. Which left his choices of colleges very slim. Stephen Curty agreed to join the Davidson College Wildcat basketball team. Where he began to blossom and show his true potential. In his freshmen year he accomplished many things. He set the record for most points(730)scored in a season by a freshmen at Davidson. Named <dif><abbr title="Southern Conference">SoCon</abbr></dif> Player of the Month in November, February, and March. Steph would help his team a bid to the <abbr title="National Collegiate Athletic Association">NCAA</abbr> College Baskketball Tournament. Even though the team lost to Maryland in the first round Curry was able to drop 30 points. He is also named to the <abbr title="second">2nd</abbr> All American team and nominated for the ESPY's breakout athlete award. Safe to say Curry had put the entire nation on alert and watch. 
-          <div class="right-img-container">
-            <img class="medium-img" src="./images/davidsonCoach.png">
+          <div class="right-float image-style">
+            <img class="medium-img" src="./images/davidsonCoach.jpeg">
           </div>
           But despite a pretty great first season there were no calls from interested professional teams. Curry continued on to his second season as Wildcat. In his second year Curry once again helped his team make it to the NCAA College Basketball tournament. Where they blazed through the first three rounds with three upsets against higher ranking opponents, <dfn><abbr title="number">No.</abbr></dfn>7 Gonzaga, <dfn><abbr title="number">No.</abbr></dfn>2 Georgetown, and <dfn><abbr title="number">No.</abbr></dfn>3 Wisconsin. Only being kept out of the Final Four round by a 2 point loss to Kansas in the Elite Eight round.
         </p>
@@ -94,10 +94,8 @@
           <p class="section-intro-mini">4 NBA Champions Titles and 2 <abbr title="Most Valuable Player">MVP</abbr>Awards</p>
         </header>
         <div class="section-line"></div>
-        <p class="article-info">
-          <div class="right-img-container2">
-            <img class="medium-image" src="./images/draftedCurry.png" />
-          </div>
+        <iframe width="760" height="415" src="https://www.youtube.com/embed/0eG-Dm2PtpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p class="article-info">          
           Stephen Curry went into draft night unlike many other draftees. There had been hints of where he would end up. The New York Knicks, an <abbr title="National Basketball Association">NBA</abbr> based in New York City, New York, made it known they were hoping to draft Curry as their pick in the <abbr title="eighth">8th</abbr> slot. But to the surprise of Steph, his mom, and the world he was choosen as the <dfn><abbr title="seventh">7th</abbr></dfn> pick of the 2009 draft. The San Francisco Golden State Warriors . 
         </p>
       </section>
@@ -107,16 +105,15 @@
           <p class="section-intro-mini">Can life be more than basketball</p>
         </header>
         <div class="section-line"></div>
-        <p class="article-info">
-          <div class="right-small-container">
-            <img class="small-image" src="./images/curryFamily.png" />
-          </div>
+        <p class="article-info">          
           There are many things that can said about Stephen Curry on and off the court. You can find an exuberate amount of artivles, videos, and messages from people of all walks of life sharing their personal thoughts on him or meeting him. 
         </p>
       </section>
       <div class="section-clear large-img-container">
-        <img class="large-img" src="./images/stephTrophy.png" alt="Stephen Curry standing with his MVP trophies and NBA Championship Trouphies">
-        <figcaption class="large-caption">Curry standing with trophies he has won</figcaption>
+        <img class="large-img" src="./images/curryFamily.jpg" alt="Stephen Curry standing with his MVP trophies and NBA Championship Trouphies">
+        <figcaption class="large-caption">
+          The Curry Family <span class="sidenote">From Left to Right: Stephen>, Riley, Ryan, Cannon, and Ayeesha</span>
+        </figcaption>
       </div>
     </main>
     <footer class="section-clear">
