--- a/main.html
+++ b/main.html
@@ -49,8 +49,8 @@
         </header>
         <div class="section-line"></div>
         <p id="tribute-info" class="article-info">
-          <div class="right-float2" id="img-div">
-            <img id="image" class="medium-size-image" src="./images/plushBasketball..jpeg" alt="A very young Stephen Curry sitting with a plush basketball.">
+          <div class="float-right" id="img-div">
+            <img id="image" class="medium-size-image" src="./images/plushBasketball..jpeg" alt="Young Stephen Curry sitting with a plush basketball.">
             <figcaption class="medium-caption" id="img-caption">
               A very young Stphen Cury sitting with a plush basketballl
             </figcaption>                   
