creating mobile and tablet stylesheets

--- a/main.html
+++ b/main.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Jazzy B">
 
     <title>Mock Tribute</title>
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" media="all" href="styles.css">
+    <link rel="stylesheet" media="screen and (max-width: 786px)" href="./tabletStyles.css">
+    <link rel="stylesheet" media="screen and (max-width: 440px" href="./mobileStyle.css">
   </head>
   <body>
     <header class="header">
@@ -16,13 +19,28 @@
     <nav class="nav-bar">
       <ul>
         <li>
-          <button><a href="#back-to-top">Back to Top</a></button>
+          <button>
+            <a href="#back-to-top">
+            <span class="desktop">Back To Top</span>
+            <span class="mobile-Screen">Top</span>
+            </a>
+          </button>
         </li>
         <li>
-          <button><a href="#young-curry">Young Curry</a></button>
+          <button>
+            <a href="#young-curry">
+              <span class="desktop">Young Curry</span>
+              <span class="mobile-Screen">Kid</span>
+            </a>
+          </button>
         </li>
         <li>
-          <button><a href="#wildcats">Wildcats</a></button>
+          <button>
+            <a href="#wildcats">
+              <span class="desktop">Wildcats</span>
+              <span class="mobile-Screen">College</span>
+            </a>
+          </button>
         </li>
         <li>
           <button><a href="#dynasty">Dynasty</a></button>
@@ -61,13 +79,13 @@
               <cite>- Dell Curry</cite>
             </blockquote>
             </span>
-          <div class="">
+          <div class="float-left">
             <img class="medium-size-image" src="./images/youngStephen.jpg" alt="Stpehned Curry as a child watching his dad's 3PT shooting contest.">          
             <figcaption class="medium-caption">
               A young Stephen Curry at his father's <abbr title="three point">3PT</abbr> shooting contest. Posted on Twitter by <span class="owner">Timeless Sports</span>
             </figcaption>
           </div>
-          Getting to spend his childhood around somme of the l egends in the game has greatly influenced Steph's love for the game. You can find several articles and videoes where past basketball stars speaking about a young Steph and his future potentenial in the sport. Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide.
+          Dell and other members of the Curry family aren't the only one who have spoken fondly of a young Steph. There are many articles and videoes of past basketball stars retelling tells of meeting and knowing Stephen Curry as a kid. Several even elaborated on seeing Curry's future potential in the sport. It's safe to say that gGetting to spend his childhood around legends of the game has greatly influenced Steph's love for basketball. Through the support, love, and encouragement of his family Steph was able to gain the skills needed to earn a spot on his high school team. He played basketball at Charlotte Christian in North Carolina. While in high school he was named to the All State Team, All Conference Team, and won his Team's <abbr title="Most Valuable Player">MVP</abbr> award. He helped lead his team to three conference titles and three state playoff appearences. He ended his high school career ranked <abbr title="Number">No.</abbr> 16 in his state and <abbr title="Number">No.</abbr> 60 of all point guards National Wide.
         </p>
       </section>
       <section class="section-clear section-header">
